# Python

01_Learning/: Classes.py  DaemonThread.py  Events.py  Inheritance.py  InheritanceTest.py  MethodGeneral.py  Multithreating.py  Queues.py  Singleton.py  SocketNetworkClient.py  SocketsNetwork.py  String_Formatting.py  Sync_Threding_semaphore.py  Synced_threading.py  magicMethods.py  regex.py
02_SpamBot/: README.md  requirements.txt  spam.py
03_Economic_Calendar_Crawler/: Crawler.py  READ_ME.txt
04_IBTrading/: Interactive_Brokers_firststeps.ipynb  main.py  msft.csv
portfolioFetch/: .gitignore  README.md  pyproject.toml
portfolioFetch/src/portfoliofetch/: db.py  portfoliofetch.py
