[project]
name = "portfolioFetch"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "StumpCore", email = "marc.schinschel@googlemail.com"},
]
dependencies = [
    "selenium>=4.24.0",
    "pandas>=2.2.2",
    "sqlalchemy>=2.0.34",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
